<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:fontFamily="@font/roboto_medium"
            android:icon="@drawable/ic_home"
            android:title="@string/home_txt"
           />

        <item
            android:id="@+id/naviagtion_history"
            android:fontFamily="@font/roboto_medium"
            android:icon="@drawable/ic_history"
            android:title="@string/history_txt" />
        <item
            android:id="@+id/naviagtion_settings"
            android:fontFamily="@font/roboto_medium"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_txt" />
        <item
            android:id="@+id/naviagtion_logout"
            android:fontFamily="@font/roboto_medium"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout_txt" />

        <!--<item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_photos" />
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/nav_movies" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />-->
    </group>

    <!--  <item android:title="Other">
          <menu>
              <item
                  android:id="@+id/nav_about_us"
                  android:title="" />
              <item
                  android:id="@+id/nav_privacy_policy"
                  android:title="" />
          </menu>
      </item>
  -->
</menu>
