<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alert_dialog_bground"
    android:gravity="center"
    android:orientation="vertical">



    <TextView
        android:textSize="20sp"
        android:id="@+id/dialog_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:text="@string/please_confirm_txt" />

    <TextView
        android:textSize="18sp"
        android:fontFamily="@font/roboto_medium"
        android:id="@+id/dialog_text_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/savephoto_txt" />

    <View
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_color"/>
    <LinearLayout
       android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/yes_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/yes_txt" />
        <View
            android:layout_width="1dp"
            android:background="@color/grey_color"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/no_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_txt" />

    </LinearLayout>

</LinearLayout>