<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/videomsgrequest_bg"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingTop="33dp"
                android:paddingRight="20dp"
                android:paddingBottom="35dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:fontFamily="@font/hind_medium"
                    android:gravity="center"
                    android:text="@string/requestfor_liveVideo"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/eventname_Et"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/edittext_bgcornors"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/eventname_txt"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/et_hint_color"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/event_date_Tv"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/edittext_bgcornors"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center|left"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:text="@string/dateformat_hinttxt"
                    android:textColor="@color/et_hint_color"
                    android:textSize="15sp" />

                <!--     <com.picstar.picstarapp.helpers.ActionEditText
                         android:id="@+id/event_descriptn_Et"
                         android:layout_width="match_parent"
                         android:layout_height="125dp"
                         android:layout_marginTop="18dp"
                         android:background="@drawable/edittext_bgcornors"
                         android:fontFamily="@font/roboto_medium"
                         android:gravity="top"
                         android:hint="@string/description_txt"
                         android:padding="10dp"
                         android:textColor="@color/white"
                         android:textColorHint="@color/et_hint_color"
                         android:maxLines="5"
                         android:textSize="15sp"
                         android:inputType="textAutoCorrect|textCapSentences|textMultiLine" />-->



                <com.picstar.picstarapp.helpers.EditText_MultiLine_ActionDone
                    android:id="@+id/event_descriptn_Et"
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/edittext_bgcornors"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="top"
                    android:hint="@string/description_txt"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/et_hint_color"
                    android:maxLines="5"
                    android:textSize="15sp"
                    android:inputType="textAutoCorrect|textCapSentences|textMultiLine" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/request_btn"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/btn_bg"
                    android:fontFamily="@font/hind_medium"
                    android:text="@string/request_txt"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>